src/tui/render/snapshots/asqr__tui__render__screen__tests__notice.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app, 80, 24)"
---
" asqr · queue: default · 1 session waiting                                      "
" Release 0.2.0  (release script)                                                "
" Three decisions before the release. Skip what you cannot decide yet.           "
"   ☐ Go?  ☒ Channels  ☐ Highlights  ✔ Review                                    "
"────────────────────────────────────────────────────────────────────────────────"
" Where should the release be announced?                                         "
" pick up to 2, and type your own if you like                                    "
"                                                                                "
"   [x] 1. Changelog                                                             "
"   [x] 2. Blog post                                                             "
" ❯ [ ] 3. Social media                                                          "
"   [ ] ✎ Somewhere else: —                                                      "
"                                                                                "
" Notes: —                                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"batch-01 collided with an unread result and was archived                        "
" ↑/↓  move   space  toggle   enter  next   ←/→  question   n  note   ?  help   q"
