src/tui/render/snapshots/asqr__tui__render__screen__tests__own_answer_unfocused_60x15.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app, 60, 15)"
---
" asqr · queue: default · 1 session waiting                  "
" Release 0.2.0  (release script)                            "
" Three decisions before the release. required questions…    "
"   ☒ Go?  ☒ Channels  ☐ Highlights  ✔ Review                "
"────────────────────────────────────────────────────────────"
" Where should the release be announced?                     "
" pick up to 3, or type your own                             "
"                                                            "
"   [x] 1. Changelog                                         "
"   [ ] 2. Blog post                                         "
" ❯ [ ] 3. Social media                                      "
"   [x] ✎ Somewhere else: an own answer much longer than th… "
"                                                            "
"                                                            "
" ↑/↓  move   space  toggle   enter  next   ←/→  question   n"
