src/tui/render/snapshots/asqr__tui__render__screen__tests__rejecting_asks_for_a_reason.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app, 90, 24)"
---
" asqr · queue: default · 1 session waiting                                                "
"Release 0.2.0  (release script)                                                        1/3"
"──────────────────────────────────────────────────────────────────────────────────────────"
"> Go?  -                     │ All checks passed. Publish 0.2.0 now?                      "
"  Channels  default          │ pick one · required                                        "
"  Highlights  -              │                                                            "
"                             │ › ( ) 1 Publish now                                        "
"                             │   ( ) 2 Later                                              "
"                             │         Keep the tag, publish after the weekend.           "
"               ┌ Reject this session? ────────────────────────────────────┐               "
"               │Reason (optional):                                        │               "
"               │┌────────────────────────────────────────────────────────┐│               "
"               ││out of date                                             ││               "
"               │└────────────────────────────────────────────────────────┘│               "
"               │enter rejects · esc goes back                             │               "
"               └──────────────────────────────────────────────────────────┘               "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"                                                                                          "
" enter  confirm   esc  back                                                               "
