src/tui/render/snapshots/asqr__tui__render__screen__tests__review_60x15.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app, width, height)"
---
" asqr · queue: default · 1 session waiting                  "
" Release 0.2.0  (release script)                            "
" Three decisions before the release. Skip what you cannot…  "
"   ☐ Go?  ☒ Channels  ☐ Highlights  ✔ Review                "
"────────────────────────────────────────────────────────────"
"                                                            "
"   ☐ Go?         -                                          "
"   ☒ Channels    Changelog (default)                        "
"   ☐ Highlights  -                                          "
"                                                            "
" answered 1 · skipped 2 · defaulted 1                       "
"                                                            "
" ❯ [ Submit ]                                               "
"                                                            "
" ↑/↓  move   enter  open/submit   ←/→  question   ?  help   "
