src/tui/render/snapshots/asqr__tui__render__screen__tests__single_picked.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app, 80, 24)"
---
" asqr · queue: default · 1 session waiting                                      "
" Release 0.2.0  (release script)                                                "
" Three decisions before the release. Skip what you cannot decide yet.           "
"   ☒ Go?  ☒ Channels  ☒ Highlights  ✔ Review                                    "
"────────────────────────────────────────────────────────────────────────────────"
" All checks passed. Publish 0.2.0 now?                                          "
" pick one                                                                       "
"                                                                                "
" ❯ (•) 1. Publish now                                                           "
"   ( ) 2. Later           Keep the tag, publish after the weekend.              "
"   ( ) 3. Do not publish  Delete the tag again.                                 "
"                                                                                "
" Notes: —                                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ↑/↓  move   enter  pick   ←/→  question   n  note   ?  help   q  quit          "
